# CPE_Machine-Learning

./: .gitignore  pyproject.toml
examples/: perceptron.ipynb
fr/Projet/: Projet.md  lambert_rodrigues_bouchot.ipynb
fr/TP0/: tp0.ipynb
fr/TP1/: tp1.ipynb
